@@ -23,38 +23,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	implementation 'org.liquibase:liquibase-core:4.8.0'
 	implementation 'org.postgresql:postgresql:42.3.3'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.3.13.RELEASE'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
-
-////test {
-////	useJUnit()
-////
-////	maxHeapSize = '1G'
-////}
-//
-//tasks.test {
-//	useJUnitPlatform()
-//	jvmArgs "--enable-preview"
-//	filter {
-////		//include specific method in any of the tests
-////		includeTestsMatching("*UiCheck")
-////
-////		//include all tests from package
-////		includeTestsMatching("org.gradle.internal.*")
-//
-////		include all integration tests
-//		includeTestsMatching("ru.skillbox.socnetwork.PostControllerTest")
-//	}
-//}
-////
 tasks.named('test') {
-
 	useJUnitPlatform()
 }
